media queries and css changes

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <h1>Solar system</h1>
+      <h1 class="title">Solar system facts</h1>
       <div class="container"></div>
       <div class="description"></div>
     </main>
