--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script defer src="script.js"></script>
     <title>Solar System</title>
   </head>
-  <body>
-    <main>
-      <h1 class="title">Solar system facts</h1>
-      <div class="container"></div>
+  <div class=mainTitle><h1>Solar system facts</h1></div>
+  <div class="main">
+    
+      <div class="container container_selPlanets"></div>
       <div class="description"></div>
-    </main>
+    </div>
   </body>
 </html>
