--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <title>Solar System</title>
   </head>
-  <div class=mainTitle><h1>Solar system facts</h1></div>
-  <div class="main">
-    
+  <body>
+    <div class="mainTitle"><h1>Solar system facts</h1></div>
+    <div class="main">
       <div class="container container_selPlanets"></div>
       <div class="description"></div>
     </div>
