--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <title>Solar System</title>
   </head>
   <body>
